--- a/connectors/python/tabsdata_mssql/pytest.ini
+++ b/connectors/python/tabsdata_mssql/pytest.ini
@@ -5,6 +5,8 @@
 [pytest]
 
 markers =
+    agent: mark tests that require the tabsdata agent.
+    ai_provider: mark tests that require an ai provider (accepted values: openai).
     azure: mark tests that require credentials to Azure.
     chipset: test that might give false positives or negatives due to chipset behaviour (specially on numbers precision).
     config_resolver: tests for the config_resolver tool in tabsserver.
