--- a/expansions/polars/modules/ty-tableframe/pyproject.toml
+++ b/expansions/polars/modules/ty-tableframe/pyproject.toml
@@ -53,22 +53,29 @@ known_first_party = [
     "tabsdata",
     "tabsdata_agent",
     "tabsdata_databricks",
+    "tabsdata_example",
     "tabsdata_mongodb",
     "tabsdata_mssql",
     "tabsdata_salesforce",
     "tabsdata_snowflake",
     "ta_features",
     "ta_tableframe",
-    "td_sdk",
     "te_examples",
     "te_tableframe",
+    "ty_tableframe",
+    "tests_tabsdata",
+    "tests_tabsdata_agent",
+    "tests_tabsdata_databricks",
+    "tests_tabsdata_example",
+    "tests_tabsdata_mongodb",
+    "tests_tabsdata_mssql",
+    "tests_tabsdata_salesforce",
+    "tests_tabsdata_snowflake",
     "tests_ta_features",
     "tests_ta_tableframe",
-    "tests_tabsdata",
     "tests_te_examples",
     "tests_te_tableframe",
     "tests_ty_tableframe",
-    "ty_tableframe",
 ]
 known_third_party = ["docker"]
 skip = ["docker/"]
