--- a/requirements/requirements-third-party.txt
+++ b/requirements/requirements-third-party.txt
@@ -24,10 +24,18 @@ platformdirs==4.4.0
 polars==1.33.1
 PyYAML==6.0.2
 pyarrow==21.0.0
-pyiceberg[glue]==0.10.0
+# Note: pinning pydantic and pyiceberg to specific versions due to a regression in
+# their code, upgrade to latest once solved.
+# See: https://github.com/apache/iceberg-python/issues/2590
+# pyiceberg[glue]==0.10.0
+pydantic==2.11.10
+pyiceberg[glue]==0.9.1
 pywin32==308; platform_system == "Windows"
 requests==2.32.5
-rich==14.1.0
+# Note: unpinning rich as part of the pydantic regression fix, reppin once it is
+# resolved.
+# rich==14.1.0
+rich<14.0.0
 rich-click==1.9.0
 sqlalchemy==2.0.43
 typing_extensions==4.15.0
