--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -230,6 +230,10 @@ jobs:
       S30__S3_SECRET_KEY: ${{ secrets.S30__S3_SECRET_KEY }}
       S30__S3_REGION: ${{ secrets.S30__S3_REGION }}
       S30__S3_URI: ${{ secrets.S30__S3_URI }}
+      S31__S3_ACCESS_KEY: ${{ secrets.S31__S3_ACCESS_KEY }}
+      S31__S3_SECRET_KEY: ${{ secrets.S31__S3_SECRET_KEY }}
+      S31__S3_REGION: ${{ secrets.S31__S3_REGION }}
+      S31__S3_URI: ${{ secrets.S31__S3_URI }}
       COPY_AWS_AWS_ACCESS_KEY_ID: ${{ secrets.COPY_AWS_AWS_ACCESS_KEY_ID }}
       COPY_AWS_AWS_REGION: ${{ secrets.COPY_AWS_AWS_REGION }}
       COPY_AWS_AWS_SECRET_ACCESS_KEY: ${{ secrets.COPY_AWS_AWS_SECRET_ACCESS_KEY }}
