--- a/Cross.toml
+++ b/Cross.toml
@@ -67,6 +67,10 @@ passthrough = [
     "S30__S3_SECRET_KEY",
     "S30__S3_REGION",
     "S30__S3_URI",
+    "S31__S3_ACCESS_KEY",
+    "S31__S3_SECRET_KEY",
+    "S31__S3_REGION",
+    "S31__S3_URI",
     "COPY_AWS_AWS_ACCESS_KEY_ID",
     "COPY_AWS_AWS_REGION",
     "COPY_AWS_AWS_SECRET_ACCESS_KEY",
