--- a/variant/config/pytest/supervisor.yaml
+++ b/variant/config/pytest/supervisor.yaml
@@ -2,7 +2,13 @@
 # Copyright 2025 Tabs Data Inc.
 #
 
-apiserver:
-  address: 127.0.0.1:2467
-  internal-address: 127.0.0.1:2468
-  access-jwt-expiration: 36288000
+pytest:
+  apiserver:
+    address: 127.0.0.1:2467
+    internal-address: 127.0.0.1:2468
+    access-jwt-expiration: 36288000
+aitest:
+  apiserver:
+    address: 127.0.0.1:2477
+    internal-address: 127.0.0.1:2478
+    access-jwt-expiration: 36288000
